@startuml
class Persona{
+cedula: String
+direccion: String
+correo: String
+telefono: String
+mostrarInfo(): void
}

class Estudiante {
+carrera: String
+nivel: int
}
class Docente {
+facutad: String
+nivel: int
+horasAsignadas: int
}
class EstuPresencial {
+horas_presenciales: int
+horario: String
}
class EstuVirtual{
+plataforma: String
+tutor_virtual: String
}
class DocenteLinea{
+tipo_contrato: String
+mostrarInfo(): void
}
Docente<--- DocenteLinea
Estudiante<---EstuPresencial
Estudiante<---EstuVirtual
Persona <----Estudiante
Persona<----- Docente

@enduml